Fix fn for Java 1.8